[gd_scene load_steps=5 format=3 uid="uid://bpavrdxy3crnh"]

[ext_resource type="Script" path="res://scenes/menus/player_ui_timers.gd" id="1_h1f1v"]
[ext_resource type="FontFile" uid="uid://c6o2q18e80rdv" path="res://assets/FugazOne-Regular.ttf" id="2_rjbtt"]

[sub_resource type="LabelSettings" id="LabelSettings_681r6"]
font = ExtResource("2_rjbtt")
font_size = 101

[sub_resource type="LabelSettings" id="LabelSettings_5hfbq"]
font = ExtResource("2_rjbtt")
font_size = 61

[node name="PlayerUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="UIMargins" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="Timers" type="Control" parent="UIMargins"]
layout_mode = 2
script = ExtResource("1_h1f1v")

[node name="TimerContainer" type="VBoxContainer" parent="UIMargins/Timers"]
layout_mode = 1
offset_right = 3.0
offset_bottom = 12.0

[node name="GameTimerContainer" type="VBoxContainer" parent="UIMargins/Timers/TimerContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UIMargins/Timers/TimerContainer/GameTimerContainer"]
layout_mode = 2
text = "0:00"
label_settings = SubResource("LabelSettings_681r6")

[node name="TimerSeparator" type="HSeparator" parent="UIMargins/Timers/TimerContainer"]
visible = false
layout_mode = 2

[node name="StageTimerContainer" type="VBoxContainer" parent="UIMargins/Timers/TimerContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UIMargins/Timers/TimerContainer/StageTimerContainer"]
layout_mode = 2
text = "0:00"
label_settings = SubResource("LabelSettings_5hfbq")

[node name="Splits" type="Control" parent="UIMargins"]
layout_mode = 2

[node name="SplitsContainer" type="VBoxContainer" parent="UIMargins/Splits"]
layout_mode = 1
offset_left = 3.0
offset_top = 322.0
offset_right = 43.0
offset_bottom = 362.0

[node name="Label" type="Label" parent="UIMargins/Splits/SplitsContainer"]
layout_mode = 2
